# python-template

./: .pre-commit-config.yaml  .ruff.toml  LICENSE.md  MANIFEST.in  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: pytests.yaml
project/: __main__.py  constants.py  main.py
tests/: dummy_test.py
