[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
exclude = [
	"**/build",
	"**/dist",
	"**/out",
	"**/venv",
]

[tool.coverage.run]
branch = true
source = ["project"]
omit = [
	"**/__init__.py",
	"**/_protocol.py",
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
	"logger.*",
    ]
